n2yo.com (archived on 2017-06-06)
{
  "alexa_rank": 71473,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2055,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.79,
  "homepage_snapshot_redirected_domain": "n2yo.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170319075851id_/http://www.n2yo.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170319075851id_/http%3A//n2yo.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "n2yo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606013220id_/http%3A//www.n2yo.com/about/%3Fa%3Dprivacy",
  "policy_title": "Privacy policy",
  "policy_url": "n2yo.com/about/?a=privacy",
  "sha1": "83457318aa80d14303aa6093326f57604aa80993",
  "simhash": 16197523959941794124,
  "simhash_updated": false,
  "site_hostname": "n2yo.com",
  "site_url": "http://n2yo.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170606013220",
  "word_count": 327,
  "year": 2017
}

--- a/n/n2/n2y/n2yo.com.html
+++ b/n/n2/n2y/n2yo.com.html
@@ -1,22 +1,41 @@
-<!--The following is the downloaded HTML source of the n2yo.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119013835id_/http%3A//www.n2yo.com/about/%3Fa%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the n2yo.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013220id_/http%3A//www.n2yo.com/about/%3Fa%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>Privacy policy</title>
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=372896566168367"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script src="/js/jquery-1.11.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=372896566168367"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" src="https://contextual.media.net/einslmedianet.js?cid=8CUY6IMG3&amp;https=1&amp;crid=177938728&amp;size=641x481" async=""></script><script src="/js/jquery-1.11.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 <body>
+  <!--
+  ~ Copyright (C) 2014-2015 Media.net Advertising FZ-LLC All Rights Reserved
+  -->
+<script type="text/javascript">
+    window._mNHandle = window._mNHandle || {};
+    window._mNHandle.queue = window._mNHandle.queue || [];
+    medianet_versionId = "161199"; 
+    (function() {
+        var sct = document.createElement("script"),
+        winObj = window.top || window,
+	sctHl = winObj.document.getElementsByTagName("script")[0],
+        isSSL = 'https:' == document.location.protocol;
+        sct.type = "text/javascript";
+        sct.src = (isSSL ? 'https:' : 'http:') + '//contextual.media.net/einslmedianet.js?cid=8CUY6IMG3' + (isSSL ? '&https=1' : '')+'&crid=177938728&size=641x481';
+        sct.async = "async";
+        sctHl.parentNode.insertBefore(sct, sctHl);
+    })();
+    </script>
+
 <script type="text/javascript" src="/js/passes.js"></script> 
 <script>
 var startPass = null;
 var endPass = null;
 var timer;
 var issid = 25544;
-var lat = 39.04372;
-var lng = -77.48749;
+var lat = 37.781735;
+var lng = -122.459432;
 go();
 </script>
 
@@ -56,7 +75,7 @@ go();
 	</div>
 <span id="headermessage" style="background-color:#ffffca;border:1px dashed #cacaba;width:300px;">
 
-	Tracking <b><span style="color:#d50000">17874</span></b> objects as of 19-November-2016	<br><a href="/space-station/">HD Live streaming from Space Station</a>
+	Tracking <b><span style="color:#d50000">18646</span></b> objects as of 6-June-2017	<br><a href="/space-station/">HD Live streaming from Space Station</a>
 	<br>
 	<!--<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>-->
 <script src="/js/satellite-js/dist/satellite.min.js"></script> 
@@ -123,8 +142,8 @@ function up()
 
 var deg2rad = Math.PI/180;
 var observerGd = {
-    longitude: -77.48749 * deg2rad,
-    latitude: 39.04372 * deg2rad,
+    longitude: -122.459432 * deg2rad,
+    latitude: 37.781735 * deg2rad,
     height: 0
 };
 
@@ -166,9 +185,10 @@ var azimuth   = lookAngles.azimuth,
 </script>
 
 
+
 	</span>
 </span></td>
-<td valign="top">
+<td valign="top" align="center" width="200">
 
 <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
 <!-- n2yo-com-234x60 -->
@@ -179,7 +199,10 @@ var azimuth   = lookAngles.azimuth,
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>-->
+
 <b><span id="countdown"></span></b>
+
+
 </td>
 <td align="right" valign="top">
 			<form action="/database/#results" method="GET">
@@ -235,24 +258,24 @@ var azimuth   = lookAngles.azimuth,
                 <div class="column">
 				<a href="/satellite/?s=25544">SPACE STATION</a>
 <a href="/satellite/?s=36516">SES 1</a>
-<a href="/satellite/?s=01576">VANGUARD DEB</a>
-<a href="/satellite/?s=00050">DELTA 1 R/B</a>
-<a href="/satellite/?s=00051">ECHO 1 DEB (MET</a>
-<a href="/satellite/?s=00082">SCOUT X-1 R/B</a>
-<a href="/satellite/?s=00053">ECHO 1 DEB (MET</a>
-<a href="/satellite/?s=00012">VANGUARD R/B</a>
-<a href="/satellite/?s=00016">VANGUARD R/B</a>
-<a href="/satellite/?s=05922">TIROS 2 DEB *</a>
-<a href="/satellite/?s=29155">GOES 13</a>
-<a href="/satellite/?s=00115">THOR ABLE DEB (</a>
-<a href="/satellite/?s=04026">SCOUT X-1 DEB</a>
-<a href="/satellite/?s=00047">THOR ABLESTAR R</a>
-<a href="/satellite/?s=39404">FIREFLY</a>
-<a href="/satellite/?s=03927">SCOUT X-1 DEB</a>
-<a href="/satellite/?s=00118">THOR ABLESTAR R</a>
+<a href="/satellite/?s=41864">SOYUZ MS-03</a>
+<a href="/satellite/?s=28654">NOAA 18</a>
 <a href="/satellite/?s=33591">NOAA 19</a>
-<a href="/satellite/?s=00120">THOR ABLESTAR D</a>
-<a href="/satellite/?s=00123">THOR ABLESTAR D</a>
+<a href="/satellite/?s=25338">NOAA 15</a>
+<a href="/satellite/?s=38771">METOP-B</a>
+<a href="/satellite/?s=25994">TERRA</a>
+<a href="/satellite/?s=27424">AQUA</a>
+<a href="/satellite/?s=37849">NPP</a>
+<a href="/satellite/?s=29155">GOES 13</a>
+<a href="/satellite/?s=36032">NSS 12</a>
+<a href="/satellite/?s=40967">FOX-1A (AO-85)</a>
+<a href="/satellite/?s=27607">SAUDISAT 1C</a>
+<a href="/satellite/?s=39487">EXPRESS-AM5</a>
+<a href="/satellite/?s=36411">GOES 15</a>
+<a href="/satellite/?s=39022">YAMAL 402</a>
+<a href="/satellite/?s=28924">GE-23</a>
+<a href="/satellite/?s=37820">TIANGONG 1</a>
+<a href="/satellite/?s=26931">PCSAT</a>
 				<a href="/satellites/?c=most-popular">MORE...</a>
                 </div>
 				</div>
@@ -264,26 +287,26 @@ var azimuth   = lookAngles.azimuth,
             <div class="dropdown">
 			<div class="dd-inner">
                 <div class="column">
-				<a href="/satellite/?s=41848">WORLDVIEW-4</a>
-<a href="/satellite/?s=41838">SJ-17 (SHIJIAN-</a>
-<a href="/satellite/?s=41836">HIMAWARI 9</a>
-<a href="/satellite/?s=41834">BANXING-2</a>
-<a href="/satellite/?s=41820">SOYUZ MS-02</a>
-<a href="/satellite/?s=41818">CYGNUS</a>
-<a href="/satellite/?s=41812">SHENZHOU-11</a>
-<a href="/satellite/?s=41794">SKY MUSTER II</a>
-<a href="/satellite/?s=41793">GSAT 18</a>
-<a href="/satellite/?s=41790">SCATSAT 1</a>
-<a href="/satellite/?s=41789">ALSAT 1N</a>
-<a href="/satellite/?s=41788">CANX-7</a>
-<a href="/satellite/?s=41787">PATHFINDER 1</a>
-<a href="/satellite/?s=41786">ALSAT 2B</a>
-<a href="/satellite/?s=41785">ALSAT 1B</a>
-<a href="/satellite/?s=41784">PISAT</a>
-<a href="/satellite/?s=41783">PRATHAM</a>
-<a href="/satellite/?s=41782">FLOCK 2EP 19</a>
-<a href="/satellite/?s=41777">CS1 3U DOVE</a>
-<a href="/satellite/?s=41776">CS1 3U DOVE</a>
+				<a href="/satellite/?s=42737">ATLANTIS</a>
+<a href="/satellite/?s=42736">BEEAGLESAT</a>
+<a href="/satellite/?s=42735">AOXIANG-1</a>
+<a href="/satellite/?s=42734">EXALTA-1</a>
+<a href="/satellite/?s=42733">SNUSAT-1 (2)</a>
+<a href="/satellite/?s=42732">POLYITAN-2-SAU</a>
+<a href="/satellite/?s=42731">I-INSPIRE II</a>
+<a href="/satellite/?s=42730">SUSAT</a>
+<a href="/satellite/?s=42729">AALTO-2</a>
+<a href="/satellite/?s=42728">QBITO</a>
+<a href="/satellite/?s=42726">NSIGHT-1</a>
+<a href="/satellite/?s=42725">LILACSAT-1</a>
+<a href="/satellite/?s=42724">DUTHSAT</a>
+<a href="/satellite/?s=42723">CHALLENGER</a>
+<a href="/satellite/?s=42722">NJUST-1</a>
+<a href="/satellite/?s=42721">UNSW-ECO</a>
+<a href="/satellite/?s=42719">COSMOS 2518</a>
+<a href="/satellite/?s=42718">HOOPOE</a>
+<a href="/satellite/?s=42717">SPACECUBE</a>
+<a href="/satellite/?s=42716">UPSAT</a>
 				<a href="/satellites/?c=latest-launches">MORE...</a>
                 </div>
 				</div>
@@ -355,7 +378,7 @@ var azimuth   = lookAngles.azimuth,
                 <div class="column">
 				<h4>ALERTING TOOLS</h4>
                     <a href="/info/?a=43"><img src="/ddmenu/phone.png" border="0" width="16" style="vertical-align: text-bottom"> SPACE STATION PREDICTIONS BY VOICE</a>
-                    <a href="/info/?a=18"><img src="/ddmenu/alert.png" border="0" width="16" style="vertical-align: text-bottom"> SPACE STATION NOTIFICATION TOOL </a>
+                    <a href="/login/iss-notifications/"><img src="/ddmenu/alert.png" border="0" width="16" style="vertical-align: text-bottom"> SPACE STATION NOTIFICATION TOOL </a>
                     <a href="/info/?a=15"><img src="/ddmenu/email.png" border="0" width="16" style="vertical-align: text-bottom"> ALERTS BY EMAIL AND SMS</a>
 				</div>
 				</div>
