--- a/f/fo/for/forexmarkethours.com.html
+++ b/f/fo/for/forexmarkethours.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the forexmarkethours.com privacy policy that was archived on 2016-11-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161125051318id_/http%3A//www.forexmarkethours.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the forexmarkethours.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013259id_/http%3A//www.forexmarkethours.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>                                                                                                                                                                                                                                                                          <script language="javascript">function getSelText(){var txt="";if(window.getSelection){txt=window.getSelection()}else if(document.getSelection){txt=document.getSelection()}else if(document.selection){txt=document.selection.createRange().text}else return 0;txt+="";len=txt.length;return len}function displayPage(){len=getSelText();if(len>250){if(window.getSelection){window.getSelection().removeAllRanges()}else if(document.selection&&document.selection.clear){document.selection.clear()}}window.setTimeout("displayPage()",100)}</script><link rel="stylesheet" type="text/css" href="/main.css"><title>Forex Market Hours</title>
 <meta http-equiv="Content-Language" content="en">
@@ -39,8 +39,8 @@ eval ("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,l
 <a href="http://www.tradingsystemsforex.com/">Forex Trading Systems</a></div>
 <br><br><div style="padding-left: 10px;"><a href="http://www.100forexbrokers.com/" style="color: #003595; font-size: 110%">Forex brokers guide</a></div><br>
 <br>
-<!--<div style="text-align: center"><a href="http://www.valutrades.com/en/home?mtag=ForexMarketHours" rel="nofollow"><img src="/campaigns/fsr_sept.jpg"></a></div><br>-->
-
+<div style="text-align: center"><a href="http://forexdailypips.com/free-winning-forex-indicator-markethours/" rel="nofollow"><img src="https://pixel-geo.prfct.co/sseg?add=7498997&amp;source=js_tag&amp;a_id=1082" width="1" height="1" border="0" rel="nofollow"><img src="http://forexdailypips.com/ads/160.jpg" rel="nofollow" alt="Top Rated Free Forex Indicator..."></a></div>
+<br>
 <div style="padding-left: 10px;">
 <br>
 <a href="http://forexdarkside.com/" style="color: #003595; font-size: 110%">Forex myth &amp; truth</a><br>
@@ -107,11 +107,11 @@ The information can be disclosed when legally required to do so, at the request 
     </p></td><td rowspan="2" valign="top" width="16"></td><td rowspan="2" valign="top" width="1" bgcolor="#ededed"></td><td rowspan="2" valign="top"><img src="globe_sidebar.gif"><table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td width="250" style="padding-left: 16px;"><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com">HOME</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/GMT_hours/02/">GMT HOURS</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/active_currency/04/">ACTIVE CURRENCY</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/volatility/05/">VOLATILITY</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/correlation/06/">CORRELATION</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/strength_index/07/">STRENGTH INDEX</a><br><font color="#808080">►</font>&nbsp;<a href="http://www.forexmarkethours.com/currency_trading_range/08/">CURRENCY TRADING RANGE</a><br><br>
 <center>
 
-<iframe src="http://www.wizardoftrading.com/ads/index.php?section=serve&amp;id=87&amp;output=html" rel="nofollow" width="160" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>
+<!--<IFRAME SRC="http://www.wizardoftrading.com/ads/index.php?section=serve&id=87&output=html" rel="nofollow" width="160" height="600" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling="no"></IFRAME>-->
 
 </center><br>
 <br>
 <div align="center"><img src="/strategies_globe1_grey.png" alt="">
 <br>
 <a href="http://forex-strategies-revealed.com/" target="_blank"><b>Free Forex strategies</b></a>
-</div></td></tr></tbody></table></td></tr><tr><td valign="bottom" bgcolor="#ffffff"><div class="leftsidelinks"><br><br></div></td></tr></tbody></table><table cellspacing="0" cellpadding="0" width="100%" border="0"><tbody><tr><td bgcolor="#A09080"></td></tr></tbody></table><table cellpadding="0" cellspacing="0" width="100%" align="center" bgcolor="#d3edfa"><tbody><tr><td><br><div align="center"><br>Copyright © 2006 — 2016 <a href="http://www.forexmarkethours.com">Forexmarkethours.com</a> | <a href="/privacy/">Privacy Policy</a></div><br><div align="center"><a href="http://www.forexmarkethours.com/advertising/09/">ADVERTISING</a> | <a href="http://www.forexmarkethours.com/contact/">CONTACT</a></div><br><br></td></tr></tbody></table><table cellspacing="0" cellpadding="0" width="100%" border="0"><tbody><tr><td bgcolor="#A09080"></td></tr></tbody></table></body></html>
+</div></td></tr></tbody></table></td></tr><tr><td valign="bottom" bgcolor="#ffffff"><div class="leftsidelinks"><br><br></div></td></tr></tbody></table><table cellspacing="0" cellpadding="0" width="100%" border="0"><tbody><tr><td bgcolor="#A09080"></td></tr></tbody></table><table cellpadding="0" cellspacing="0" width="100%" align="center" bgcolor="#d3edfa"><tbody><tr><td><br><div align="center"><br>Copyright © 2006 — 2017 <a href="http://www.forexmarkethours.com">Forexmarkethours.com</a> | <a href="/privacy/">Privacy Policy</a></div><br><div align="center"><a href="http://www.forexmarkethours.com/advertising/09/">ADVERTISING</a> | <a href="http://www.forexmarkethours.com/contact/">CONTACT</a></div><br><br></td></tr></tbody></table><table cellspacing="0" cellpadding="0" width="100%" border="0"><tbody><tr><td bgcolor="#A09080"></td></tr></tbody></table></body></html>
