--- a/p/pl/pla/planyo.com.html
+++ b/p/pl/pla/planyo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the planyo.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120123109id_/http%3A//www.planyo.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the planyo.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013349id_/http%3A//www.planyo.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
     <title>Privacy</title>
@@ -16,7 +16,7 @@
 <meta name="robots" content="index, follow">
   </head>
   <body>
-<div class="page pg_privacy_php">  <script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=1"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://www.planyo.com/libs/mootools-core-1.5.1.js"></script>
+<div class="page pg_privacy_php">  <script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&amp;ns=2"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://www.planyo.com/libs/mootools-core-1.5.1.js"></script>
   <script type="text/javascript" src="https://www.planyo.com/libs/mootools-more-1.5.1.js"></script>
     <script type="text/javascript" src="https://www.planyo.com/utils.js"></script>
     <script type="text/javascript" src="https://www.planyo.com/wrappers.js"></script>
@@ -57,8 +57,7 @@
 </li>
 <li id="tab_pricing_php" class="top_level"><a href="http://www.planyo.com/pricing.php">Our pricing</a></li>
 <li id="tab_affiliate_program_php" class="top_level"><a href="http://www.planyo.com/affiliate-program.php">Affiliate program</a></li>
-<li id="tab_help_php" class="top_level"><a href="http://www.planyo.com/help.php">Help</a><div class="submenu_holder" id="smh_6"><ul class="submenu"><li id="tab_site_settings_php_enable_assistant_1"><a href="http://www.planyo.com/site-settings.php?enable-assistant=1">Set-up Assistant</a></li>
-<li id="tab_faq_php"><a href="http://www.planyo.com/faq.php">Frequently Asked Questions</a></li>
+<li id="tab_help_php" class="top_level"><a href="http://www.planyo.com/help.php">Help</a><div class="submenu_holder" id="smh_6"><ul class="submenu"><li id="tab_faq_php"><a href="http://www.planyo.com/faq.php">Frequently Asked Questions</a></li>
 <li id="tab_tutorials_php"><a href="http://www.planyo.com/tutorials.php">Tutorials</a></li>
 <li id="tab_experts_php"><a href="http://www.planyo.com/experts.php">Planyo Experts</a></li>
 <li id="tab_api_php"><a href="http://www.planyo.com/api.php">API - Planyo Web Services</a></li>
@@ -243,7 +242,7 @@ function js_print_bottom_stuff() {
 window.addEvent('load', js_print_bottom_stuff);
 </script>
 
-<span id="copyright">Copyright ©2016 <a rel="nofollow" href="http://www.xtreeme.com">Xtreeme Sagl</a> &nbsp;&nbsp;&nbsp; <a id="privacy-link" rel="nofollow" href="/privacy.php">Privacy</a> &nbsp;&nbsp;&nbsp;   <a target="_blank" id="tos-link" rel="nofollow" href="/tos.txt">Terms and conditions</a> &nbsp;&nbsp;&nbsp; <a id="affiliate-program-link" rel="nofollow" href="/affiliate-program.php">Affiliates</a> &nbsp;&nbsp;&nbsp; <a rel="nofollow" href="http://www.facebook.com/planyocom"><span id="icon-facebook" style="vertical-align:middle"></span></a></span></div></div>    <script type="text/javascript">
+<span id="copyright">Copyright ©2017 <a rel="nofollow" href="http://www.xtreeme.com">Xtreeme Sagl</a> &nbsp;&nbsp;&nbsp; <a id="privacy-link" rel="nofollow" href="/privacy.php">Privacy</a> &nbsp;&nbsp;&nbsp;   <a target="_blank" id="tos-link" rel="nofollow" href="/tos.txt">Terms and conditions</a> &nbsp;&nbsp;&nbsp; <a id="affiliate-program-link" rel="nofollow" href="/affiliate-program.php">Affiliates</a> &nbsp;&nbsp;&nbsp; <a rel="nofollow" href="http://www.facebook.com/planyocom"><span id="icon-facebook" style="vertical-align:middle"></span></a></span></div></div>    <script type="text/javascript">
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -260,7 +259,7 @@ window.addEvent('load', js_print_bottom_stuff);
 //<![CDATA[
 (function() {
 var _analytics_scr = document.createElement('script');
-_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=1';
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=2977d8d74f63d7f8fedbea018b7a1d05&ns=2';
 var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
 })();
 // ]]>
