--- a/l/li/lis/listwire.com.html
+++ b/l/li/lis/listwire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the listwire.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119001410id_/http%3A//www.listwire.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the listwire.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013359id_/http%3A//www.listwire.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>List Wire Privacy</title>
@@ -113,12 +113,11 @@
 
 <tr>
 <td width="172" height="24" align="LEFT" valign="MIDDLE" bgcolor="#F5F5F5">
-<p class="menudot"><b>Autoresponder phobia soon evaporated</b></p>
-<p class="menudot">"I don't know about you, but I always had a thing about autoresponders and whether they were worth all the trouble? Especially as before you had to pay for the privilege. With ListWire all those fears were washed away and I love it. My list is growing every day and long may it and ListWire continue.<br>Thanks guys."</p>
+<p class="menudot"><b>A Really Great AutoResponder!</b></p>
+<p class="menudot">"I can Now start to Building my huge List at no monthly bill.<br> <br>Honestly I believe it's the best Free auto responder out on the market!<br>This is great for the newbees to start taking action Building a List!!<br><br>The system is REALLY Easy to navigate, The Fourm is great for<br>any Problems you mite inconter don't be afraid to ask for Help.<br><br>They have  great staff and other helpfull members ,So join the<br>meet new friends""</p>
 <p class="menudot" style="align:right;">
-<br><img src="http://forms.listwire.com/testimonial_images/008.jpg" width="60" height="72">
-<br>- Raymond Cowie
-<br><i><a href="http://www.theplrbandit.com" target="_new">http://www.theplrbandit.co...</a></i>
+<br>- John Diegmiller
+<br><i><a href="http://homenetworkingwealth.ws" target="_new">http://homenetworkingwealt...</a></i>
 </p>
 
 </td>
@@ -316,7 +315,7 @@ privacy policy.
 <center>
 <table width="600" border="0">
 <tbody><tr><td align="CENTER">
-<div class="copytext">List Wire © 2008-2016. A division of Internet Marketing Aces, LLC. All rights reserved.</div>
+<div class="copytext">List Wire © 2008-2017. A division of Internet Marketing Aces, LLC. All rights reserved.</div>
 <div class="copytext">Internet Marketing Aces, LLC - 12472 Lake Underhill Rd. Suite 112 - Orlando, FL 32828 - U.S.A.</div>
 <div class="copytext" style="padding-top:6px;">
 <a href="http://www.listwire.com/tos.php" class="copylink" target="_tos">Terms</a> | <a href="http://www.listwire.com/privacy.php" class="copylink" target="_privacy">Privacy</a> | <a href="http://www.listwire.com/antispam.php" class="copylink" target="_abuse">Anti-Spam</a></div>
