--- a/b/be/bes/bestcollegesonline.com.html
+++ b/b/be/bes/bestcollegesonline.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the bestcollegesonline.com privacy policy that was archived on 2016-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161127144113id_/http%3A//www.bestcollegesonline.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bestcollegesonline.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013426id_/http%3A//www.bestcollegesonline.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en-US" xmlns:fb="http://ogp.me/ns/fb#" xmlns:addthis="http://www.addthis.com/help/api-spec" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#"><!--<![endif]--><head>
-        <meta charset="utf-8"><script src="https://js-agent.newrelic.com/nr-995.min.js"></script><script src="//use.typekit.com/jun7ewk.js" type="text/javascript" async=""></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!d){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[y[n]];return f&&f.push([b,n,r,i]),i}}function p(e,t){w[e]=v(e).concat(t)}function v(e){return w[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",y[n]=t,t in s||(s[t]=[])})}var w={},y={},b={on:p,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a};return b}function i(){return new r}function a(){d=!0,s=p.backlog={}}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o(),d=!1;p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=b.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(w,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,w={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-995.min.js"},y=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),b=t.exports={offset:a(),origin:m,features:{},xhrWrappable:y};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
+        <meta charset="utf-8"><script src="https://js-agent.newrelic.com/nr-998.min.js"></script><script src="//use.typekit.com/jun7ewk.js" type="text/javascript" async=""></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-998.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
         <meta name="viewport" content="initial-scale=1">
 
         <title>Privacy Policy - BestCollegesOnline.com</title>
@@ -83,18 +83,6 @@ img.emoji {
 
 <script src="//assets.adobedtm.com/73e838b12498fbc88a04286ad6036d82e8fa072e/satelliteLib-417220ec562b4d50dfa234df6b4d1f15a2bf3ff0.js"></script>
 
-
-<!-- Start Visual Website Optimizer Asynchronous Code -->
-<script type="text/javascript">
-var _vwo_code=(function(){
-var account_id=728,
-settings_tolerance=1500,
-library_tolerance=3000,
-use_existing_jquery=false,
-// DO NOT EDIT BELOW THIS LINE
-f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=728&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20161127144113id_%2Fhttp%3A%2F%2Fwww.bestcollegesonline.com%2Fprivacy-policy%2F&amp;r=0.09919233296882912" type="text/javascript"></script>
-<!-- End Visual Website Optimizer Asynchronous Code -->
 
 <meta property="fb:app_id" content="177876152310599">
 
@@ -266,7 +254,7 @@ var addthis_share = {};
 <li id="menu-item-15191" class="rss menu-item menu-item-type-custom menu-item-object-custom menu-item-15191"><a href="http://www.bestcollegesonline.com/feed/">RSS Feed</a></li>
 </ul>                    </nav>
 
-                    <p>Copyright © 2016 <a href="http://www.bestcollegesonline.com" title="BestCollegesOnline.com">BestCollegesOnline.com</a>
+                    <p>Copyright © 2017 <a href="http://www.bestcollegesonline.com" title="BestCollegesOnline.com">BestCollegesOnline.com</a>
                     </p>
                 </div><!-- END .span12 -->
             </div><!-- END #header .row #footer -->
@@ -290,38 +278,64 @@ var _wpcf7 = {"loaderUrl":"http:\/\/www.bestcollegesonline.com\/wp-content\/plug
 <script type="text/javascript" src="http://www.bestcollegesonline.com/wp-includes/js/comment-reply.min.js?ver=4.4.2"></script>
 <!--wp_footer-->        <!--    END WP generated footer ================================================== -->
 
-        
-<script>
-  // -- Degree finder
-  jQuery(document).ready(function($){
-    new QuickDegreeFinder().populate(
-      '.edudirect-degree_level_id',
-      '.edudirect-category_id',
-      '.edudirect-subject_id'
-    ).setDefaults(
-      '',
-      '',
-      ''
-    );
-  })
-</script>
 
+    
+    <script>
+    var qdfDegree   = '',
+        qdfCategory = '',
+        qdfSubject  = '';
+    </script>
 
-<script type="text/javascript">
-try {
-  var id=_vis_opt_experiment_id,u="undefined", _combination=_vis_opt_readCookie('_vis_opt_exp_'+id+'_combi');
-  if(typeof(_vwo_exp[id].combination_chosen) != u) _combination = _vwo_exp[id].combination_chosen;
-  if(typeof(_vis_opt_comb_name[_combination]) != u) {
-    if(!window.clicky_custom ) var clicky_custom = {};
-    clicky_custom.split = {name:"VWO-"+id,version:_vis_opt_comb_name[_combination]}
-  }
-}
-catch(err) {}
-</script>
+    <script>
+      jQuery(document).ready(function($){
+        var qdf = new QuickDegreeFinder();
+        qdf.populate(
+          'select[name=degree_level_id]',
+          'select[name=category_id]',
+          'select[name=subject_id]'
+        ).setDefaults(
+          qdfDegree,
+          qdfCategory,
+          qdfSubject
+        ).onData(function() {
+          if(qdfDegree !== '' && qdfSubject !== '' && qdfCategory == '') {
+            loop1:
+            for(var i = 0; i < QuickDegreeFinder.data.items[qdfDegree - 1].children.length; i++) {
+              loop2:
+              for(var j = 0; j < QuickDegreeFinder.data.items[qdfDegree - 1].children[i].children.length; j++) {
+                if(QuickDegreeFinder.data.items[qdfDegree - 1].children[i].children[j].value === parseInt(qdfSubject)) {
+                  qdf.setDefaultCategory(QuickDegreeFinder.data.items[qdfDegree - 1].children[i].value);
+                  break loop1;
+                }
+              }
+            }
+          }
+        });
+      })
+    </script>
 
-<!-- Satellite Footer Code, BJC 4/25/12 -->
-<script type="text/javascript">_satellite.pageBottom();</script>
-<!-- End Satellite Footer Code -->
-    <script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"122ecb3574","applicationID":"3580522","transactionName":"ZlNVbEVSWEVSBUNdC18ZdltDWllYHBZWUwE=","queueTime":0,"applicationTime":558,"atts":"ShRWGg1IS0s=","errorBeacon":"bam.nr-data.net","agent":""}</script>
+    <script>
+      // -- Degree finder
+      jQuery(document).ready(function($){
+        new QuickDegreeFinder().populate(
+          '.edudirect-degree_level_id',
+          '.edudirect-category_id',
+          '.edudirect-subject_id'
+        ).setDefaults(
+          '',
+          '',
+          ''
+        );
+      })
+    </script>
+
+        <script type="text/javascript" src="http://tags.crwdcntrl.net/c/10154/cc_ajax.js?ns=_cc10154" id="LOTCC_10154"></script>
+    <script type="text/javascript">_cc10154.bcp();</script>
+
+    <!-- Satellite Footer Code, BJC 4/25/12 -->
+    <script type="text/javascript">_satellite.pageBottom();</script>
+    <!-- End Satellite Footer Code -->
+
+    <script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"122ecb3574","applicationID":"3580522","transactionName":"ZlNVbEVSWEVSBUNdC18ZdltDWllYHBZWUwE=","queueTime":0,"applicationTime":458,"atts":"ShRWGg1IS0s=","errorBeacon":"bam.nr-data.net","agent":""}</script>
 
 </body></html>
