opt-intelligence.com (archived on 2017-06-06)
{
  "alexa_rank": 335301,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 14728,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.66,
  "homepage_snapshot_redirected_domain": "opt-intelligence.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170427222424id_/http://www.opt-intelligence.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170427222424id_/http%3A//opt-intelligence.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "opt-intelligence.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606014853id_/http%3A//www.opt-intelligence.com/privacypolicy.html",
  "policy_title": "Privacy Policy of Opt-Intelligence",
  "policy_url": "opt-intelligence.com/privacypolicy.html",
  "sha1": "0372436e604dc8d3c584659f523636c5afe99abb",
  "simhash": 12455687279355379761,
  "simhash_updated": false,
  "site_hostname": "opt-intelligence.com",
  "site_url": "http://opt-intelligence.com",
  "smog": 18.88,
  "strict_updated": false,
  "timestamp": "20170606014853",
  "word_count": 2372,
  "year": 2017
}

--- a/o/op/opt/opt-intelligence.com.html
+++ b/o/op/opt/opt-intelligence.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the opt-intelligence.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120103102id_/http%3A//opt-intelligence.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the opt-intelligence.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606014853id_/http%3A//www.opt-intelligence.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -15,6 +15,7 @@
 		<script type="text/javascript">
 			var _gaq = _gaq || [];
 			_gaq.push(['_setAccount', 'UA-26049903-1']);
+			_gaq.push(['_setDomainName', 'opt-intelligence.com']);
 			_gaq.push(['_trackPageview']);
 		
 			(function() {
@@ -156,7 +157,8 @@ catch (e) {}
 						<a href="about.html">Our Story</a>
 						<a href="leadership.html">Meet the Team</a>
 						<a href="news.html">News</a>
-						<a href="careers.html">Careers</a>
+<a href="https://blog.opt-intelligence.com/">Blog</a>
+<a href="careers.html">Careers</a>
 						<a href="contact.html">Contact Us</a>
 						<a href="privacypolicy.html">Privacy Policy</a>
 					</div>
