--- a/v/ve/veg/vegasaur.com.html
+++ b/v/ve/veg/vegasaur.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the vegasaur.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119003708id_/http%3A//vegasaur.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vegasaur.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606015048id_/http%3A//vegasaur.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html class="no-js" lang="en"><head>
+<!DOCTYPE html><html class=" js " lang="en"><head>
     <meta charset="utf-8">
         <title>Vegasaur.com Privacy Statement</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -25,10 +25,10 @@
     <link rel="canonical" href="http://vegasaur.com/privacy">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/res/style.min.css?v=20161024" type="text/css">
-    <link rel="stylesheet" href="/res/skymenu/css/sky-mega-menu.css?v=20161024" type="text/css">
-    <link rel="stylesheet" href="/res/social-likes/social-likes_classic.css?v=20161024" type="text/css">
-                        <script async="" src="//s.swiftypecdn.com/install/v1/st.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/res/modernizr.js?v=20161024"></script>
+    <link rel="stylesheet" href="/res/style.min.css?v=20170215" type="text/css">
+    <link rel="stylesheet" href="/res/skymenu/css/sky-mega-menu.css?v=20170215" type="text/css">
+    <link rel="stylesheet" href="/res/social-likes/social-likes_classic.css?v=20170215" type="text/css">
+                        <script async="" src="//s.swiftypecdn.com/install/v1/st.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/res/modernizr.js?v=20170215"></script>
     <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({
@@ -112,15 +112,9 @@
                                 <div class="grid-container4">
                                     <ul>
                                         <li>
-                                            <a rel="nofollow" target="_blank" href="/VegasPro" onclick="_gaq.push(['_trackEvent', 'External link', this.href, 'privacy']); ">VEGAS Pro</a>
+                                            <a target="_blank" href="/VegasPro" onclick="_gaq.push(['_trackEvent', 'External link', this.href, 'privacy']); ">VEGAS Pro</a>
                                         </li>
-                                        <li>
-                                            <a rel="nofollow" target="_blank" href="/FootageStudio4K" onclick="_gaq.push(['_trackEvent', 'External link', this.href, 'privacy']); ">FootageStudio 4k</a>
-                                        </li>
-                                        <li>
-                                            <a rel="nofollow" target="_blank" href="/SolveigMM-Video-Splitter" onclick="_gaq.push(['_trackEvent', 'External link', this.href, 'privacy']); ">SolveigMM Video Splitter</a>
-                                        </li>
-                                        <li><a href="/ProDRENALIN">proDAD ProDRENALIN V1</a></li>
+                                                                                                                                                                                                                                                                                                                                                                                              <li><a href="/ProDRENALIN">proDAD ProDRENALIN V1</a></li>
                                         <li><a href="/Defishr">proDAD Defishr V1</a></li>
                                         <li><a href="/ReSpeedr">proDAD ReSpeedr V1</a></li>
                                         <li><a href="/Mercalli">proDAD Mercalli V4 SAL+</a></li>
@@ -132,8 +126,7 @@
                     </div>
                 </li>
 
-                <li id="menu_testimonials"><a href="/testimonials"><i class="fa fa-comments"></i>Testimonials</a></li>
-                <li id="menu_download"><a href="/download"><i class="fa fa-download"></i>Download</a></li>
+                                <li id="menu_download"><a href="/download"><i class="fa fa-download"></i>Download</a></li>
                 <li id="menu_purchase"><a href="/purchase"><i class="fa fa-shopping-cart"></i>Purchase</a></li>
                 <li id="menu_support"><a href="/support"><i class="fa fa-user"></i>Support</a></li>
 
@@ -145,11 +138,11 @@
         <div id="content">
             <h1>Privacy Statement</h1>
 
-<div id="banner57" class="banner" style="margin: 20px 0 0px 0">
+<div id="banner96" class="banner" style="margin: 20px 0 0px 0">
     
     <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Responsive Top Slot 1 -->
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9716115526063658" data-ad-slot="4929451191" data-ad-format="auto"></ins>
+<!-- Responsive Top Slot 3 -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9716115526063658" data-ad-slot="3313117191" data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -193,7 +186,7 @@ In addition, we collect non-personal data, such as  the date and time pages are 
 
     <footer id="pagefooter" class="clearfix">
         <nav class="float-left">
-            <span class="hide720">Copyright © 2010-2016 </span><a href="/">Vegasaur.com</a>
+            <span class="hide720">Copyright © 2010-2017 </span><a href="/">Vegasaur.com</a>
         </nav>
 
         <nav class="float-right">
@@ -207,7 +200,7 @@ In addition, we collect non-personal data, such as  the date and time pages are 
         </nav>
     </footer>
                 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/res/jquery/jquery.js?v=20161024"><\/script>')</script><script src="/res/jquery/jquery.js?v=20161024"></script>
+    <script>window.jQuery || document.write('<script src="/res/jquery/jquery.js?v=20170215"><\/script>')</script><script src="/res/jquery/jquery.js?v=20170215"></script>
 
         <script>
         var _gaq = _gaq || [];
@@ -223,7 +216,7 @@ In addition, we collect non-personal data, such as  the date and time pages are 
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
-    <script src="/res/social-likes/social-likes.min.js?v=20161024"></script>
+    <script src="/res/social-likes/social-likes.min.js?v=20170215"></script>
     <script>
         $('.social-likes').on('popup_opened.social-likes', function (event, service, win) {
             _gaq.push(['_trackEvent', 'Share (Page)', service, 'http://vegasaur.com']);
@@ -272,8 +265,8 @@ In addition, we collect non-personal data, such as  the date and time pages are 
     </script>
 
             <script>
-                        $('#banner57 a').click(function () {
-                _gaq.push(['_trackEvent', 'Banner', 'Top Slot 1', 'privacy']);
+                        $('#banner96 a').click(function () {
+                _gaq.push(['_trackEvent', 'Banner', 'Top Slot 3', 'privacy']);
             });
                         $('#banner92 a').click(function () {
                 _gaq.push(['_trackEvent', 'Banner', 'Bottom Slot 2', 'privacy']);
