baopals.com (archived on 2017-06-06)
{
  "alexa_rank": 42096,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 6214,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.4,
  "homepage_snapshot_redirected_domain": "baopals.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170508200039id_/http://www.baopals.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170508200039id_/http%3A//baopals.com",
  "interval": "2017_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "baopals.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606020124id_/http%3A//www.baopals.com/privacy-policy",
  "policy_title": "Privacy Policy - Baopals",
  "policy_url": "baopals.com/privacy-policy",
  "sha1": "edae2596a286b891ba7c781d47407a3bba6346c0",
  "simhash": 17225664674242941430,
  "simhash_updated": false,
  "site_hostname": "baopals.com",
  "site_url": "http://baopals.com",
  "smog": 15.11,
  "strict_updated": false,
  "timestamp": "20170606020124",
  "word_count": 1021,
  "year": 2017
}

--- a/b/ba/bao/baopals.com.html
+++ b/b/ba/bao/baopals.com.html
@@ -1,26 +1,28 @@
-<!--The following is the downloaded HTML source of the baopals.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120232236id_/http%3A//www.baopals.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the baopals.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020124id_/http%3A//www.baopals.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html dir="ltr" lang="en"><head>
   <!-- Meta -->
   <title>Privacy Policy - Baopals</title>
+
+  <meta name="p:domain_verify" content="7476fd91344745afb243095caf5d3562">
 
   <!-- Base Href -->
   <base href="http://www.baopals.com/">
   <!-- /Base Href -->
 
   <!-- Keyword/Description -->
-  <meta name="description" content="">
+  <meta name="description" content="Baopals is the best way to shop in China. Online shopping in China is made easy through our Tmall and Taobao English platform. Shop for great deals now.">
   <meta name="keywords" content="Baopals,taobao agent,shipping,taobao English,wechat pay,unionpay,alipay,wechat wallet">
   <!-- /Keyword/Description -->
   <link rel="canonical" href="http://www.baopals.com/privacy-policy">
 
   <!-- Css Import -->
-  <link rel="stylesheet" href="https://www.baopals.com/catalog/view/theme/lexus_megashop/dist/stylesheet/dist.css?=v2.1.9">
+  <link rel="stylesheet" href="https://www.baopals.com/catalog/view/theme/lexus_megashop/dist/stylesheet/dist.css?=v2.2.24">
   <!-- /Css Import -->
 
   <!-- Js Import -->
-  <script src="https://www.baopals.com/catalog/view/theme/lexus_megashop/dist/javascript/dist.js?=v2.0.9"></script>
+  <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="https://www.baopals.com/catalog/view/theme/lexus_megashop/dist/javascript/dist.js?=v2.0.16"></script>
   <!-- /Js Import -->
 
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
@@ -40,13 +42,16 @@
 
   <!-- Facebook Meta -->
   <meta property="og:url" content="http://www.baopals.com/privacy-policy">
-  <meta property="og:image" content="https://www.baopals.com/catalog/view/theme/lexus_megashop/image/Baopals-Facebook.png" xmlns:og="http://opengraphprotocol.org/schema/">
+  <meta property="og:image" itemprop="image" content="https://www.baopals.com/catalog/view/theme/lexus_megashop/image/Baopals-Facebook.png" xmlns:og="http://opengraphprotocol.org/schema/">
   <meta property="og:title" content="Privacy Policy - Baopals">
-  <meta property="og:description" content="Baopals is the best way to shop in China. Over 800 million Taobao and Tmall products, with easy payment and delivery, and friendly service from your pals.">
+  <meta property="og:description" content="Baopals is the best way to shop in China. Online shopping in China is made easy through our Tmall and Taobao English platform. Shop for great deals now.">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
   <!-- /Facebook Meta -->
+
+  <!-- Google robot -->
+  <meta name="google" content="notranslate">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="https://www.baopals.com/catalog/view/theme/lexus_megashop/image/favicon/apple-icon-57x57.png">
@@ -72,7 +77,28 @@
 
 
   
-  </head>
+  
+
+  <!-- Facebook Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+  n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+  document,'script','https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '467824263608277', {
+  em: 'insert_email_variable,'
+  });
+  fbq('track', 'PageView');
+  </script>
+  <noscript>< img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=467824263608277&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- DO NOT MODIFY -->
+  <!-- End Facebook Pixel Code -->
+
+
+</head>
 <body class="layout- fs12 page-information-privacy_policy">
   <header id="header" class="fixed">
     <nav class="navbar navbar-primary">
@@ -80,12 +106,12 @@
         <div class="row">
             <div class="navbar-center navbar-brand">
               <a class="navbar-brand" href="http://www.baopals.com/">
-                <img alt="Baopals" src="https://www.baopals.com/catalog/view/theme/lexus_megashop/dist/images/baopals-logo.png">
+                <img alt="Baopals" src="/catalog/view/theme/lexus_megashop/dist/images/baopals-logo.png" style="margin-top: 6px">
               </a>
             </div>
             <div>
               <ul class="nav navbar-nav navbar-right hidden-xs">
-                <li class="cart bold" style="position: relative;top: 2px;">
+                <li class="cart bold" style="position: relative;top: 3px;">
                   <a href="/cart">
                     <span class="fa fa-shopping-cart"></span>
                     <span>CART</span>
@@ -111,13 +137,9 @@
 
               <div class="nav navbar-nav navbar-left">
                 <div class="dropdown">
-                  <a class="dropdown-toggle bold desktop" data-toggle="dropdown" style="display: block;">
-                    ALL DEPARTMENTS
-                    <i class="fa fa-chevron-right"></i>
-                  </a>
+                  <a class="dropdown-toggle bold desktop" data-toggle="dropdown" style="display: block;">ALL DEPARTMENTS<i class="fa fa-chevron-right"></i></a>
                   <ul class="dropdown-menu departments-dropdown">
-                    <li><a href="/department/christmas" style="color:#36c;font-size: 13px;"><i class="fa fa-gift" aria-hidden="true"></i> Christmas</a></li>
-                    <li><a href="/department/alcohol"><i class="fa fa-glass" aria-hidden="true"></i> Alcohol</a></li>
+                    <li style="padding-top: 2px"><a href="/department/alcohol"><i class="fa fa-glass" aria-hidden="true"></i> Alcohol</a></li>
                     <li><a href="/department/culture-gifts-instruments"><i class="fa fa-book"></i> Art, Books &amp; Instruments</a></li>
                     <li><a href="/department/automotive"><i class="fa fa-car" aria-hidden="true"></i> Automotive</a></li>
                     <li><a href="/department/bags-jewlery-accessories"><i class="fa fa-shopping-bag"></i> Bags, Jewelry &amp; Accessories</a></li>
@@ -134,17 +156,17 @@
                     <li><a href="/department/sports-outdoors"><i class="fa fa-futbol-o"></i> Sports &amp; Outdoors</a></li>
                     <li><a href="/department/toys-kids-baby"><i class="fa fa-child"></i> Toys, Kids &amp; Baby</a></li>
                     <li><a href="/department/womens-beauty"><i class="fa fa-female"></i> Women's Beauty</a></li>
-                    <li><a href="/department/womens-clothing"><i class="fa fa-female"></i> Women's Clothing</a></li>
+                    <li style="padding-bottom: 2px"><a href="/department/womens-clothing"><i class="fa fa-female"></i> Women's Clothing</a></li>
                   </ul>
                 </div>
               </div>
 
               <div class="nav navbar-nav navbar-right btn-group hidden-xs accountDrop">
                 <a data-toggle="modal" data-target="#loginModal" class="btn btn-default navbar-btn dropdown-toggle user-dropdown-button">
-                  <span class="bold">Hey, Pal!</span>
+                  <span class="bold">Hey pal!</span>
                   <i class="fa fa-caret-down"></i>
                 </a>
-                                  <ul class="dropdown-menu notLogged" style="top:39px">
+                                  <ul class="dropdown-menu notLogged" style="top:39px; opacity: 0.95;">
                     <li>
                       <a class="btn btn-default signIn" role="button" data-toggle="modal" data-target="#loginModal">Sign In</a>
                     </li>
@@ -197,6 +219,12 @@
             <li>
               <a href="http://blog.baopals.com/category/shopping-tips/" target="_blank">
                 SHOPPING TIPS
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li>
+              <a href="https://blog.baopals.com/shopping-tips/get-25-rmb-off-next-order?q=25rmboff/" target="_blank">
+                GET 25 RMB OFF
               </a>
             </li>
           </ul>
@@ -264,6 +292,8 @@
 <!--========================================
 =             HEADER END              =
 =========================================-->
+
+<div class="container policy">
   <div class="row">
     <div class="col-md-12">
       <h1 class="main-title">
@@ -339,7 +369,7 @@
       <h4>Last Updated June 8, 2016</h4>
     </div>
   </div>
-
+</div>
 <!--========================================
 =             FOOTER BEGIN              =
 =========================================-->
@@ -349,9 +379,11 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <h1 class="bold text-center">
-                <span class="dot-single">●</span>
-                <a class="black-hover" href="http://blog.baopals.com/category/shopping-tips/" target="_blank">HOW TO BAOPALS</a>
-                <span class="dot-single">●</span>
+                <a class="black-hover" href="http://blog.baopals.com/category/shopping-tips/" target="_blank">
+                  <span class="dot-single">●</span>
+                  HOW TO BAOPALS
+                  <span class="dot-single">●</span>
+                </a>
               </h1>
             </div>
           </div>
@@ -397,17 +429,12 @@
                     <i class="fa fa-facebook fa-3x"></i>
                   </a>
                 </li>
-                <li class="relative">
+                <li>
                   <a class="weixin">
-                    <i class="fa fa-weixin fa-3x"></i>
                     <div class="weixin-qr">
+                      <i class="fa fa-weixin fa-3x" data-toggle="dropdown"></i>
                       <img alt="WeChat QR" class="img-thumbnail" src="/catalog/view/theme/lexus_megashop/image/WeChat-QR-with-ID.jpg">
                     </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://plus.google.com/+Baopals" target="_blank" rel="author">
-                    <i class="fa fa-google fa-3x"></i>
                   </a>
                 </li>
                 <li>
@@ -447,7 +474,7 @@
               <div class="h3 bold">LET US HELP YOU</div>
               <ul class="rtl-list">
                 <li>
-                  <a href="https://blog.baopals.com/faq/" target="_blank">
+                  <a href="https://support.baopals.com/hc/en-us" target="_blank">
                     FAQ
                   </a>
                 </li>
@@ -466,6 +493,11 @@
                     TRACKING YOUR ORDER
                   </a>
                 </li>
+                <li>
+                  <a href="https://blog.baopals.com/shopping-tips/get-25-rmb-off-next-order?q=25rmboff/" target="_blank">
+                    GET 25 RMB OFF
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
@@ -473,7 +505,7 @@
         <div class="container-fluid copyright">
           <div class="container">
             <div class="row" style="margin: 0;">
-              <div class="pull-left">© 2015-2016, BAOPALS.COM | 沪ICP备15044417号</div>
+              <div class="pull-left">© 2015-2017, BAOPALS.COM | 沪ICP备15044417号</div>
               <div class="pull-right">
                 <a onclick="translateApp.setToEnglish()">EN</a>
                 <span>/</span>
@@ -483,8 +515,8 @@
           </div>
         </div>
       </footer>
-
     </section>
+
     <div class="modal fade" role="dialog" id="loginModal">
       <div class="modal-dialog modal-sm" style="padding-top:0;">
         <div class="modal-content">
@@ -518,7 +550,7 @@
         </div>
         <div class="pull-right bold">
           <a href="https://www.baopals.com/account">
-            Hey, Pal!
+            Hey pal!
           </a>
         </div>
       </div>
@@ -529,7 +561,6 @@
           <a class="drpbtn bold" type="button" data-toggle="dropdown">DEPARTMENTS
           <i style="padding:0;" class="pull-right fa fa-chevron-down"></i></a>
           <ul class="dropdown-menu">
-            <li><a href="/department/christmas" style="color:#36c;font-size: 13px;"><i class="fa fa-gift" aria-hidden="true"></i> Christmas</a></li>
             <li><a href="/department/alcohol"><i class="fa fa-glass" aria-hidden="true"></i> Alcohol</a></li>
             <li><a href="/department/culture-gifts-instruments"><i class="fa fa-book"></i> Art, Books &amp; Instruments</a></li>
             <li><a href="/department/automotive"><i class="fa fa-car" aria-hidden="true"></i> Automotive</a></li>
@@ -563,6 +594,19 @@
     <div id="#return-to-top"></div>
 
     <script>
+
+    $(function () {
+      var hasCookie = $.cookie("hideBetaCookie");
+      if (hasCookie != null) {
+        $('.beta-message').hide();
+      }
+    });
+
+     $('.beta-message-close').on('click', function(){
+        $('.beta-message').hide();
+
+        $.cookie("hideBetaCookie", 1, { expires : 30 });
+     });
 
     // ===== Scroll to Top ====
     $(window).scroll(function() {
@@ -683,9 +727,9 @@
     	}
     });
 
-    $(".fa-weixin").on("click", function(e) {
-    	$(".weixin-qr").fadeToggle(200);
-    });
+    // $(".fa-weixin").on("click", function(e) {
+    // 	$(".weixin-qr").fadeToggle(200);
+    // });
 
 
     // Search dropdown
